--- a/public/edit.html
+++ b/public/edit.html
@@ -28,6 +28,8 @@
   -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="https://momentjs.com/downloads/moment-with-locales.min.js"></script>
+  <script type="text/javascript" src="https://momentjs.com/downloads/moment-timezone.js"></script>
+  <script type="text/javascript" src="https://momentjs.com/downloads/moment-timezone-with-data.js"></script>
   <script type="text/javascript" src="edit.js"></script>
 
 </body>
